Improve Geneformer vocab remap

--- a/configs/finetune.yaml
+++ b/configs/finetune.yaml
@@ -1,5 +1,6 @@
 model_name_or_path: ctheodoris/Geneformer
 model_vocab: /content/Geneformer/geneformer/token_dictionary_gc104M.pkl
+model_gene_name_dict: /content/Geneformer/geneformer/gene_name_id_dict_gc104M.pkl
 tokens_dir: gse144735/processed/tokens
 output_dir: outputs/geneformer_colon
 max_length: 2048
