--- a/configs/finetune.yaml
+++ b/configs/finetune.yaml
@@ -12,3 +12,10 @@ learning_rate: 2.0e-5
 weight_decay: 0.01
 patience: 3
 seed: 42
+class_weights:
+  Normal: 1.0
+  Border: 1.3
+  Tumor: 2.0
+token_mask_prob: 0.05
+mixup_prob: 0.3
+mixup_alpha: 0.6
