--- a/configs/finetune.yaml
+++ b/configs/finetune.yaml
@@ -2,7 +2,7 @@ model_name_or_path: ctheodoris/Geneformer
 model_vocab: /content/Geneformer/geneformer/token_dictionary_gc104M.pkl
 model_gene_name_dict: /content/Geneformer/geneformer/gene_name_id_dict_gc104M.pkl
 tokens_dir: gse144735/processed/tokens
-output_dir: outputs/geneformer_colon6
+output_dir: outputs/geneformer_colon_binary
 max_length: 2048
 num_epochs: 8
 train_batch_size: 8
@@ -12,12 +12,13 @@ learning_rate: 2.0e-5
 weight_decay: 0.01
 patience: 3
 seed: 42
+label_column: BinaryClass
 class_weights:
   Normal: 1.0
-  Border: 1.4
-  Tumor: 2.2
+  Tumor: 2.0
 token_mask_prob: 0.03
 mixup_prob: 0.0
 mixup_alpha: 0.6
 balance_strategy: class_donor
 focal_gamma: 0.0
+warmup_ratio: 0.05
